src/objects/P2__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>P1</label>
        <referenceTo>P1__c</referenceTo>
        <relationshipLabel>P2</relationshipLabel>
        <relationshipName>P2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cab_No__c</fullName>
        <label>Cab No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_name__c</fullName>
        <label>Driver name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>P2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>P2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>P2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>